# irud

./: LICENSE  README.md  pyproject.toml
src/irud/datamodel/schema_definitions/: irud.yaml
src/irud/preprocessing/: __init__.py  preprocess_irud_tracker.py
src/irud/preprocessing/mapping_files/: columns.py  terms.py
src/irud/preprocessing/process/: process_columns.py  process_diseases.py  process_hpo.py  process_inheritance.py
