[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "irud"
authors = [
    {name = "Sadahiro Kumagai", email="sadahiro.kumagai@keio.jp"},
    {name = "Adam Graefe", email="adam.graefe@charite.de"}
     ]
description = "This repository provides the LinkML data model for the Japanese Initiative on Rare and Undiagnosed Diseases (IRUD), along with preprocessing scripts from the IRUD Tracker to enable export to Phenopackets using RareLink."
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "",
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Machine Learning"
]
dependencies = [
    "numpy",
]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest>=7.0.0,<8.0.0", "pytest-cov"]
docs = ["sphinx>=7.0.0", "sphinx-rtd-theme>=1.3.0", "sphinx-copybutton>=0.5.0"]

[project.urls]
homepage = "https://www.amed.go.jp/en/program/IRUD/"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.dynamic]
version = { attr = "irud.__version__" }

[project.scripts]  # Optional
sample = "sample:main"
